<resources>
    <string name="app_name">CalculadoraIMC</string>
    <string name="mainActivity_BMITitleTextView">BMI Calculator</string>
    <string name="mainActivity_tagHeightTextView">Introduce your height:</string>
    <string name="mainActivity_tagWeightTextView">Introduce your weight:</string>
    <string name="mainActivity_MBITextView">BMI: Introduce your data and click calculate</string>
    <string name="mainActivity_calculateButtonText">Calculate</string>
    <string name="mainActivity_height_Text" translatable="false">%1$s cm</string>
    <string name="mainActivity_weight_Text" translatable="false">%1$s Kg</string>
    <string name="mainActivity_underweight_Text">BMI: %1$s%nYou\'re underweight</string>
    <string name="mainActivity_okWeight_Text">BMI: %1$s%nYou\'re OK!</string>
    <string name="mainActivity_overweight_Text">BMI: %1$s%nYou\'re overweight</string>
    <string name="mainActivity_obeseWeight_Text">BMI: %1$s%nYou\'re obese</string>


</resources>